[css] Font size is too small in windows with medium sizes  issue-7569

--- a/assets/scss/home-page.sass
+++ b/assets/scss/home-page.sass
@@ -42,30 +42,24 @@
 
     .title
       font-family: $concord-font
-      font-size: 1em
-      min-height: 3.5em
+      font-size: 2em
+      min-height: 4em
       @media screen and (min-width: 320px)
-        font-family: $concord-font
         font-size: 2.5em
         min-height: 4em
       @include media-breakpoint-up(sm)
-        font-family: $concord-font
         font-size: 2.5em
         min-height: 4em
       @include media-breakpoint-up(md)
-        font-family: $concord-font
         font-size: 2.5em
         min-height: 4em
       @include media-breakpoint-up(lg)
-        font-family: $concord-font
         font-size: 3.5em
         min-height: 4em
       @include media-breakpoint-up(xl)
-        font-family: $concord-font
         font-size: 4em
         min-height: 4em
       @media screen and (min-width: 1400px)
-        font-family: $concord-font
         font-size: 5.5em
         min-height: 4em
 
